k8s/template/prometheus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME-prometheus
  namespace: $NAMESPACE
  labels:
    app: $APP_NAME-prometheus
spec:
  selector:
    app: $APP_NAME-prometheus
  type: ClusterIP
  ports:
    - name: http
      port: 9090
